# modular_teleop

./: README.md  testinv.cpp  testinv.py
geomagic_control/: CMakeLists.txt
geomagic_control/cfg/: omni.rviz
geomagic_control/launch/: geomagic_headless.launch
geomagic_control/src/: set_torque.cpp  torque_calc.cpp  torque_calc1.cpp
robot_control/: CMakeLists.txt  package.xml
robot_control/config/: irb120_control.yaml
robot_control/launch/: irb120_control.launch  irb120_rqt.launch
robot_description/: CMakeLists.txt  package.xml
robot_description/launch/: load_irb120.launch
robot_description/urdf/abb_common/: common_materials.xacro
robot_description/urdf/irb120/: irb120.gazebo  irb120.xacro
robot_gazebo/: CMakeLists.txt  package.xml
robot_gazebo/config/: irb120_control.yaml  robot_state_visualize.rviz
robot_gazebo/launch/: irb120_gazebo.launch
robot_gazebo/urdf/irb120/: irb120.xacro  irb120_macro.xacro
robot_gazebo/world/: test1.world
robot_interface/: CMakeLists.txt  package.xml
robot_interface/config/: joint_factor.yaml
robot_interface/scripts/: initialize.py
robot_interface/src/: robot_interface.cpp  robot_interface_pos.cpp  robot_interface_pos_1.cpp  robot_interface_sensor.cpp
